manifests/test-mongo-deployment.yaml
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it
#this is a test mongo yaml file, dont use it

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
